z-index conflict fix

--- a/src/components/NavBar/header.module.scss
+++ b/src/components/NavBar/header.module.scss
@@ -5,7 +5,7 @@ header {
   padding: 15px;
   position: fixed;
   width: 100%;
-  z-index: 99999999999;
+  z-index: 99;
   background: #151515;
   .logo {
     img {
